k8s/mm-namespace.yaml
apiVersion: v1

kind: Namespace

metadata:
  name: mm-project
  
  labels:
    name: mm-project
    environment: development
