k8s/mm-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mm-frontend
  namespace: mm-project
  labels:
    app: mm-frontend
    version: v1

spec:
  replicas: 1
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  
  selector:
    matchLabels:
      app: mm-frontend
  
  template:
    metadata:
      labels:
        app: mm-frontend
        tier: frontend
    
    spec:
      restartPolicy: Always
      
      containers:
        - name: mm-frontend
          image: mm-frontend:latest
          imagePullPolicy: IfNotPresent
          
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2

---
apiVersion: v1
kind: Service

metadata:
  name: mm-frontend-service
  namespace: mm-project
  labels:
    app: mm-frontend

spec:
  type: NodePort
  
  selector:
    app: mm-frontend
  
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mm-frontend-ingress
  namespace: mm-project
  labels:
    app: mm-frontend

spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mm-frontend-service
                port:
                  number: 80
    
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mm-frontend-service
                port:
                  number: 80
